trying to fix some issue with contrast

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -320,7 +320,8 @@ nav,
 .shop-wrap,
 .support-wrap,
 .intern-wrap,
-.details-wrap {
+.details-wrap,
+.museum-ad h3 {
   background: var(--black-100);
 }
 
